# PolyPhys

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  N500epsilon5.0r5.5lz205.5sig0.8nc12012dt0.002bdump1000adump5000ens1.bug.data  PolyPhys_structure.txt  README.md  README.rst  SECURITY.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_slurm.txt  setup.cfg  setup.py  tox.ini
.trunk/: trunk.yaml
bash_pipeline/: archive_rsync.sh  archive_tar.sh  fix_stamps_analysis.py  zip_tar-all_simulations-v1.0.sh  zip_tar-analysis-v1.0.sh  zip_tar-logs.sh  zip_tar-trjs-v1.0.sh
dna_initial_shape/: chain.1000_v2.data  chain.50.data  chain.80.data  chain.80_looping.data  convert_notebook_to_latex_no_code.txt  coords.txt  helical_linear-on_cylinder-n500dcyl8hfactor0.7bfactor0.95.data  helical_linear-on_cylinder-n500dcyl8hfactor0.7bfactor0.97.data  helical_ring-on_cylinder-n1000dcyl9.0.data  helical_ring-on_cylinder-n100dcyl9.0.data  helical_ring-on_cylinder-n200dcyl6.data  helical_ring-on_cylinder-n200dcyl7.0.data  helical_ring-on_cylinder-n200dcyl8.data  helix-v_23-Helix-all_in_one-closed_helix.ipynb  hetero_linear-on_square-ns300dl5.0nl7hfactor0.8bfactor0.95.data  hetero_ring-on_cube-ns350dl5.0nl7hfactor0.8bfactor0.95.data  moltemplate_hetero.ipynb  selfavoiding_lattice_ring_n225.txt
docs/: make.bat
notebooks/: 2d_gusssian_fit.py  FacetGrid_heat_map.ipynb  Fix_TIME_SCALE-in-VIZ-0_README-viz_v3.0.ipynb  Fix_TIME_SCALE-in-VIZ-0_README.txt  Hns-Cluster.ipynb  Hns.ipynb  HnsCub.ipynb  HnsCyl.ipynb  Igor_convertor.ipynb  N1000epsilon5.0r8.0lz308.5sig1.0nc0dt0.005bdump1000adump5000-all-rPhiCrd.csv  (+298 more)
polyphys/: __init__.py  __version__.py  api.py  cli.py  (+1 more)
(+2038 files in other folders)
